Fixed squishing of background images

--- a/css/style.css
+++ b/css/style.css
@@ -385,26 +385,14 @@ input.button{
 
 /*George's background experiments*/
 img.bg {
-  /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 1024px;
-
   /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
+  height: 100%;
 
   /* Set up positioning */
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: -1000;
-}
-
-@media screen and (max-width: 1024px) { /* Specific to this particular image */
-  img.bg {
-    left: 50%;
-    margin-left: -512px;   /* 50% */
-  }
 }
 
 @media only screen and (max-width: 768px){
